--- a/vushyvanniy/index.html
+++ b/vushyvanniy/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Рукоділля</title></title>
     <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/0f5fc2b145.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
